fix spacing on about us

--- a/public/prod/website.css
+++ b/public/prod/website.css
@@ -746,46 +746,45 @@ input[type="submit"] {
         .about-copy span:first-of-type {
           padding-top: 27vh; } }
     .about-copy span:nth-of-type(2) {
-      padding-bottom: 24vh;
+      padding-bottom: 14vh;
       font-weight: 600;
       opacity: 1; }
       @media only screen and (min-width: 1025px) {
         .about-copy span:nth-of-type(2) {
-          padding-bottom: 53vh; } }
+          padding-bottom: 30vh; } }
     .about-copy span:nth-of-type(4) {
       font-weight: 600;
-      margin-bottom: 24vh; }
+      margin-bottom: 14vh; }
       @media only screen and (min-width: 1025px) {
         .about-copy span:nth-of-type(4) {
-          padding-bottom: 22vh; } }
+          margin-bottom: 30vh; } }
     .about-copy span:nth-of-type(5) {
-      margin-bottom: 24vh; }
+      margin-bottom: 14vh; }
       @media only screen and (min-width: 1025px) {
         .about-copy span:nth-of-type(5) {
-          padding-bottom: 22vh; } }
+          margin-bottom: 30vh; } }
     .about-copy span:nth-of-type(6) {
       font-weight: 600; }
     .about-copy span:nth-of-type(7) {
-      margin-bottom: 24vh; }
+      margin-bottom: 14vh; }
       @media only screen and (min-width: 1025px) {
         .about-copy span:nth-of-type(7) {
-          padding-bottom: 22vh; } }
+          margin-bottom: 30vh; } }
     .about-copy span:nth-of-type(8) {
       font-weight: 600; }
     .about-copy span:nth-of-type(9) {
-      padding-bottom: 22vh;
-      margin-bottom: 24vh; }
+      margin-bottom: 14vh; }
+      @media only screen and (min-width: 1025px) {
+        .about-copy span:nth-of-type(9) {
+          margin-bottom: 30vh; } }
     .about-copy span:nth-of-type(10) {
       font-weight: 600;
-      margin-bottom: 24vh; }
+      margin-bottom: 14vh; }
       @media only screen and (min-width: 1025px) {
         .about-copy span:nth-of-type(10) {
-          padding-bottom: 22vh; } }
+          margin-bottom: 30vh; } }
     .about-copy span:last-of-type {
-      margin-bottom: 24vh; }
-      @media only screen and (min-width: 1025px) {
-        .about-copy span:last-of-type {
-          padding-bottom: 0vh; } }
+      margin-bottom: 14vh; }
 
 .scroll-indicator {
   position: fixed;
