--- a/public/stylesheets/sass/_about.sass
+++ b/public/stylesheets/sass/_about.sass
@@ -25,46 +25,45 @@
       @include desktop
         padding-top: 27vh
     &:nth-of-type(2)
-      padding-bottom: 24vh
+      padding-bottom: 14vh
       font-weight: 600
       opacity: 1
       @include desktop
-        padding-bottom: 53vh
+        padding-bottom: 30vh
     &:nth-of-type(3)
     &:nth-of-type(4)
       font-weight: 600
-      margin-bottom: 24vh
+      margin-bottom: 14vh
       @include desktop
-        padding-bottom: 22vh
+        margin-bottom: 30vh
     &:nth-of-type(5)
-      margin-bottom: 24vh
+      margin-bottom: 14vh
       @include desktop
-        padding-bottom: 22vh
+        margin-bottom: 30vh
     &:nth-of-type(6)
       font-weight: 600
     &:nth-of-type(7)
-      margin-bottom: 24vh
+      margin-bottom: 14vh
       @include desktop
-        padding-bottom: 22vh
+        margin-bottom: 30vh
     &:nth-of-type(8)
       // margin-bottom: 24vh
       font-weight: 600
       @include desktop
         // padding-bottom: 22vh
     &:nth-of-type(9)
-      padding-bottom: 22vh
-      margin-bottom: 24vh
+      margin-bottom: 14vh
+      @include desktop
+        margin-bottom: 30vh
     &:nth-of-type(10)
       font-weight: 600
-      margin-bottom: 24vh
+      margin-bottom: 14vh
       @include desktop
-        padding-bottom: 22vh
+        margin-bottom: 30vh
     &:nth-of-type(11)
       // font-weight: 600
     &:last-of-type
-      margin-bottom: 24vh
-      @include desktop
-        padding-bottom: 0vh
+      margin-bottom: 14vh
 
 .scroll-indicator
   position: fixed
